fully working servo control

--- a/MDK-ARM/pump_controller/pump_controller.build_log.htm
+++ b/MDK-ARM/pump_controller/pump_controller.build_log.htm
@@ -27,39 +27,11 @@ Project File Date:  03/25/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'pump_controller'
-../Core/Src/main.c(119): error: use of undeclared identifier 'new_data'
-  119 |         if (new_data == 0) {
-      |             ^
-../Core/Src/main.c(121): error: use of undeclared identifier 'new_data'
-  121 |                 new_data = 1;
-      |                 ^
-../Core/Src/main.c(123): error: use of undeclared identifier 'new_data'
-  123 |         else if (new_data == 1) {
-      |                  ^
-../Core/Src/main.c(125): error: use of undeclared identifier 'new_data'
-  125 |                 new_data = 2;
-      |                 ^
-../Core/Src/main.c(127): error: use of undeclared identifier 'new_data'
-  127 |         else if (new_data == 2) {
-      |                  ^
-../Core/Src/main.c(129): error: use of undeclared identifier 'new_data'
-  129 |                 new_data = 3;
-      |                 ^
-../Core/Src/main.c(131): error: use of undeclared identifier 'new_data'
-  131 |         else if (new_data == 3) {
-      |                  ^
-../Core/Src/main.c(133): error: use of undeclared identifier 'new_data'
-  133 |                 new_data = 4;
-      |                 ^
-../Core/Src/main.c(135): error: use of undeclared identifier 'new_data'
-  135 |         else if (new_data == 4) {
-      |                  ^
-../Core/Src/main.c(137): error: use of undeclared identifier 'new_data'
-  137 |                 new_data = 5;
-      |                 ^
-10 errors generated.
 compiling main.c...
-"pump_controller\pump_controller.axf" - 10 Error(s), 0 Warning(s).
+linking...
+Program Size: Code=4490 RO-data=274 RW-data=16 ZI-data=1680  
+FromELF: creating hex file...
+"pump_controller\pump_controller.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -82,7 +54,6 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE@5.6.0
-Target not created.
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
